<resources>
    <string name="app_name">Workout Boost</string>
    <string name="get_ready">Get ready</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="upcoming_exercise">Upcoming Exercise</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_completed_the_workout">You have completed the workout</string>
    <string name="finish">Finish</string>
    <string name="the_end">The End</string>
    <string name="custom_dialog_title">Are you sure?</string>
    <string name="custom_dialog_body">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="calculator">Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="calculate">CALCULATE</string>
    <string name="start">Start</string>
    <string name="bmi">BMI</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="history">History</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
</resources>